# src/IO.Swagger/Model/SellNotesResponse.cs
@@ -1,0 +1,190 @@
+/* 
+ * Lending Club API
+ *
+ * Lending Club API
+ *
+ * OpenAPI spec version: 1.0
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Text.RegularExpressions;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using System.ComponentModel.DataAnnotations;
+using SwaggerDateConverter = IO.Swagger.Client.SwaggerDateConverter;
+
+namespace IO.Swagger.Model
+{
+    /// <summary>
+    /// SellNotesResponse
+    /// </summary>
+    [DataContract]
+    public partial class SellNotesResponse :  IEquatable<SellNotesResponse>, IValidatableObject
+    {
+        /// <summary>
+        /// Gets or Sets SellNotesStatus
+        /// </summary>
+        [JsonConverter(typeof(StringEnumConverter))]
+        public enum SellNotesStatusEnum
+        {
+            
+            /// <summary>
+            /// Enum SUCCESS for "SUCCESS"
+            /// </summary>
+            [EnumMember(Value = "SUCCESS")]
+            SUCCESS = 1,
+            
+            /// <summary>
+            /// Enum ERROR for "ERROR"
+            /// </summary>
+            [EnumMember(Value = "ERROR")]
+            ERROR = 2,
+            
+            /// <summary>
+            /// Enum NOLOANSTOSELL for "NO_LOANS_TO_SELL"
+            /// </summary>
+            [EnumMember(Value = "NO_LOANS_TO_SELL")]
+            NOLOANSTOSELL = 3,
+            
+            /// <summary>
+            /// Enum INVALIDORDEREXPIRATIONDATE for "INVALID_ORDER_EXPIRATION_DATE"
+            /// </summary>
+            [EnumMember(Value = "INVALID_ORDER_EXPIRATION_DATE")]
+            INVALIDORDEREXPIRATIONDATE = 4,
+            
+            /// <summary>
+            /// Enum ORDEREXPIREDATETOOSHORT for "ORDER_EXPIRE_DATE_TOO_SHORT"
+            /// </summary>
+            [EnumMember(Value = "ORDER_EXPIRE_DATE_TOO_SHORT")]
+            ORDEREXPIREDATETOOSHORT = 5,
+            
+            /// <summary>
+            /// Enum ORDEREXPIREDATETOOLONG for "ORDER_EXPIRE_DATE_TOO_LONG"
+            /// </summary>
+            [EnumMember(Value = "ORDER_EXPIRE_DATE_TOO_LONG")]
+            ORDEREXPIREDATETOOLONG = 6,
+            
+            /// <summary>
+            /// Enum UNEXPECTEDERROR for "UNEXPECTED_ERROR"
+            /// </summary>
+            [EnumMember(Value = "UNEXPECTED_ERROR")]
+            UNEXPECTEDERROR = 7
+        }
+
+        /// <summary>
+        /// Gets or Sets SellNotesStatus
+        /// </summary>
+        [DataMember(Name="sellNotesStatus", EmitDefaultValue=false)]
+        public SellNotesStatusEnum? SellNotesStatus { get; set; }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="SellNotesResponse" /> class.
+        /// </summary>
+        /// <param name="SellNotesStatus">SellNotesStatus.</param>
+        /// <param name="SellNoteConfirmations">SellNoteConfirmations.</param>
+        public SellNotesResponse(SellNotesStatusEnum? SellNotesStatus = default(SellNotesStatusEnum?), List<> SellNoteConfirmations = default(List<>))
+        {
+            this.SellNotesStatus = SellNotesStatus;
+            this.SellNoteConfirmations = SellNoteConfirmations;
+        }
+        
+
+        /// <summary>
+        /// Gets or Sets SellNoteConfirmations
+        /// </summary>
+        [DataMember(Name="sellNoteConfirmations", EmitDefaultValue=false)]
+        public List<> SellNoteConfirmations { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class SellNotesResponse {\n");
+            sb.Append("  SellNotesStatus: ").Append(SellNotesStatus).Append("\n");
+            sb.Append("  SellNoteConfirmations: ").Append(SellNoteConfirmations).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+  
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="input">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object input)
+        {
+            return this.Equals(input as SellNotesResponse);
+        }
+
+        /// <summary>
+        /// Returns true if SellNotesResponse instances are equal
+        /// </summary>
+        /// <param name="input">Instance of SellNotesResponse to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(SellNotesResponse input)
+        {
+            if (input == null)
+                return false;
+
+            return 
+                (
+                    this.SellNotesStatus == input.SellNotesStatus ||
+                    (this.SellNotesStatus != null &&
+                    this.SellNotesStatus.Equals(input.SellNotesStatus))
+                ) && 
+                (
+                    this.SellNoteConfirmations == input.SellNoteConfirmations ||
+                    this.SellNoteConfirmations != null &&
+                    this.SellNoteConfirmations.SequenceEqual(input.SellNoteConfirmations)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                int hashCode = 41;
+                if (this.SellNotesStatus != null)
+                    hashCode = hashCode * 59 + this.SellNotesStatus.GetHashCode();
+                if (this.SellNoteConfirmations != null)
+                    hashCode = hashCode * 59 + this.SellNoteConfirmations.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<System.ComponentModel.DataAnnotations.ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+
+}
